# d2helper

./: .editorconfig  .gitignore  CMakeLists.txt  D2CallStub.hpp  D2Utils.cpp  D2Utils.hpp  Define.h  DllMain.cpp  Event.cpp  Event.hpp  FastCast.cpp  HelpFunc.h  Install.cpp  Install.h  KeyModule.cpp  KeyModule.hpp  MapHelper.cpp  MapHelper.hpp  README.md  Timer.cpp  Timer.hpp  TimerQueue.hpp  WinTM.cpp  WinTM.hpp  addr.txt  cConfig.hpp  cConfigLoader.hpp  config.cpp  config.hpp  d2ext.ini  d2helper.def  d2ptrs.inc  d2ptrs_impl.cpp  helper.h  hotkey.hpp  loader.cpp  loader.hpp  log.cpp  log.h  macros.hpp  (+1 more)
D2Dll/: CMakeLists.txt  D2CallStub.cpp  D2Item.cpp  D2Item.hpp  D2Utils.cpp  D2Utils.hpp  Define.h  Inventory.hpp  d2ptrs.h  d2ptrs.inc  d2ptrs_impl.cpp  d2structs.h  d2vars.h
common/: CMakeLists.txt  FileScanner.hpp  HelpFunc.cpp  HelpFunc.h  cConfig.hpp  cConfigLoader.hpp  config.cpp  config.hpp  log.cpp  log.h  strutils.hpp
detours/: CMakeLists.txt  detours.lib
examples/: D2RegSim.ini  d2ext.ini  skills.md
modules/: Actor.hpp  AutoPotion.cpp  CMakeLists.txt  Event.cpp  Event.hpp  FastCast.cpp  KeyModule.cpp  KeyModule.hpp  PD2Support.cpp  PD2Support.hpp  Task.hpp  Timer.hpp  TimerQueue.hpp  WinTM.cpp  WinTM.hpp  d2h_module.hpp  d2hmodule.cpp  hackscript.cpp  hackscriptImpl.cpp  hackscriptImpl.hpp  hotkey.cpp
regsim/: CMakeLists.txt  KeyMap.hpp  RegIni.hpp  log_mock.hpp  regDllMain.cpp  regsim.cpp  regsim.h
test/: CMakeLists.txt  test.cpp
